--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "com.unity.ide.rider": "3.0.14",
-    "com.unity.render-pipelines.universal": "12.1.6",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.ide.rider": "3.0.28",
+    "com.unity.render-pipelines.universal": "14.0.9",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
